--- a/Users/templates/members/teacher/index.html
+++ b/Users/templates/members/teacher/index.html
@@ -17,7 +17,7 @@
                     <div class="card info-card sales-card">      
                         <div class="card-body">
 
-                            <h5 class="card-title">Subjects</h5>
+                            <h5 class="card-title">Course</h5>
 
                             <div class="d-flex align-items-center">
                                 <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
