--- a/Users/templates/users/base_site.html
+++ b/Users/templates/users/base_site.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <nav class="navbar navbar-expand-lg bg-primary bg-gradient shadow">
+    <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
 
             <a class="navbar-brand" href="">
                 <i class="bi bi-question-square-fill"></i>
-                <span class="fw-bold">QUESTIONS DESK</span>
+                <span class="text-light fw-bold">QUESTIONS DESK</span>
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +20,7 @@
                         <li class="nav-item dropdown pe-2">
                             <a class="nav-link dropdown-toggle" role="button" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="bi bi-person-circle"></i>
-                                <span class="fw-semibold">Login</span>
+                                <span class="text-light fw-semibold">Login</span>
                             </a>
                             
                             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -58,40 +58,34 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a href="{% url "register-view" %}" class="nav-link">
+                            <a href="{% url "register-view" %}" class="nav-link text-light">
                                 <i class="bi bi-person-bounding-box"></i> 
                                 Register
                             </a>
                         </li>
                     {% else %}
-                    <li class="nav-item dropstart">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            {{request.user.first_name}} {{request.user.last_name.0}}
+
+                    <li class="nav-item pe-3">
+                        <a href="{% url "index-view" %}" class="nav-link text-light">
+                            <i class="bi bi-house"></i> 
+                            Home
                         </a>
+                    </li>
 
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="dropdown-item" href="{% url "index-view" %}">
-                                    <i class="bi bi-house"></i>
-                                    Home
-                                </a>
-                            </li>
+                    <li class="nav-item pe-3">
+                        <a href="{% url "about-us-view" %}" class="nav-link text-light">
+                            <i class="bi bi-info-circle"></i>
+                            About Us
+                        </a>
+                    </li>
 
-                            <li>
-                                <a class="dropdown-item" href="{% url "about-us-view" %}">
-                                    <i class="bi bi-info-circle-fill"></i>
-                                    About Us
-                                </a>
-                            </li>
+                    <li class="nav-item pe-3">
+                        <a href="{% url "logout-view" %}" class="nav-link text-light">
+                            <i class="bi bi-arrow-right-square"></i>
+                            Logout
+                        </a>
+                    </li>
 
-                            <li>
-                                <a class="dropdown-item" href="{% url 'logout-view' %}">
-                                    <i class="bi bi-power"></i>
-                                    Logout
-                                </a>
-                            </li>
-                        </ul>
-                    </li> 
                     {% endif %}
                 </ul>
             </div>
