--- a/Users/templates/members/admin/index.html
+++ b/Users/templates/members/admin/index.html
@@ -91,10 +91,7 @@
                                                     labelLine: {
                                                         show: false
                                                     },
-                                                    data: [{
-                                                        value: {{ admins }},
-                                                        name: 'Admin'
-                                                        },
+                                                    data: [
                                                         {
                                                         value: {{ hods }},
                                                         name: 'HOD'
