--- a/Users/templates/members/hod/base_site.html
+++ b/Users/templates/members/hod/base_site.html
@@ -91,7 +91,7 @@
             <li class="nav-item mb-3">
                 <a class="nav-link" href="{% url "hod-create-teacher-view" %}">
                     <i class="bi bi-person-workspace"></i>
-                    <span>Create Teacher</span>
+                    <span>Add Teacher</span>
                 </a>
             </li>
     
