--- a/Users/static/users/css/style.css
+++ b/Users/static/users/css/style.css
@@ -4,3 +4,11 @@
     background-repeat: no-repeat;
     background-position: center;
   }
+
+
+  .index-bg {
+    background-image: url('../img/index_bg.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
