--- a/Users/templates/members/login.html
+++ b/Users/templates/members/login.html
@@ -3,7 +3,7 @@
 {% block title %} {{role}} Login {% endblock title %}
 
 {% block content %}
-    <main class="bg-secondary-subtle">
+    <main class="bg-primary-subtle">
         <div class="container">
             <section class="section min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
                 <div class="container">
